<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">平安河南</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="main_menu">主菜单</string>
	<string name="loading">加载中\u2026</string>
	<string name="exit_message">确认退出</string>
    <string name="exit">退出</string>
    <string name="confirm">确定</string>
    <string name="cancal">取消</string>
	
    <string name="update_at">更新于:&#160;</string>
    <string name="drop_down_list_header_default_text">点击刷新&#8230;</string>
    <string name="drop_down_list_header_pull_text">下拉刷新&#8230;</string>
    <string name="drop_down_list_header_release_text">放开更新&#8230;</string>
    <string name="drop_down_list_header_loading_text">加载中&#8230;</string>
    <string name="drop_down_list_footer_default_text">更多</string>
    <string name="drop_down_list_footer_loading_text">加载中&#8230;</string>
    <string name="drop_down_list_footer_no_more_text">没有更多</string>
    
    <string name="download">下载</string>
    <string name="checking">正在检查\u2026</string>
	<string name="update">更新</string>
    <string name="check_update">检查更新</string>
    <string name="update_msg">有最新的软件包哦，亲快下载吧~</string>
    <string name="update_cancel_msg">您的软件是最新的！</string>
    <string name="download_complete">下载完成</string>
    <string name="download_complete_msg">文件已下载完毕</string>
    
	<string name="about">关于</string>
    <string name="delete_cache">删除缓存</string>
    <string name="delete_cache_msg">您确定要删除缓存</string>
    <string name="about_text">方圆网</string>
    <string name="prompt">提示</string>
    <string name="net_disconnection">网络断开或出错，请检查网络！</string>
    
    <string name="releaseing">发布\u2026</string>
    <string name="comment">评论</string>
    <string name="comment_msg">说点什么吧！</string>
    <string name="comment_btn">我来说两句</string>
    
    <string name="stowing">收藏中\u2026</string>
    
    <string name="bottom_tab_1">新闻</string>
    <string name="bottom_tab_2">视频</string>
    <string name="bottom_tab_3">便民</string>
    <string name="bottom_tab_4">设置</string>
    
</resources>