<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="46dip"
        android:layout_alignParentTop="true" >

        <include layout="@layout/top_title" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#E2E2E2"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/pl_menu"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:orientation="horizontal"
            android:visibility="gone" >

            <Button
                android:id="@+id/add_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/comment_btn" />

            <TextView
                android:id="@+id/mcomm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:layout_weight="1"
                android:drawableLeft="@drawable/mcomm"
                android:gravity="center"
                android:paddingRight="5dip"
                android:text="0"
                android:textIsSelectable="false" />
        </LinearLayout>
<!-- android:visibility="gone" -->
        <LinearLayout
            android:id="@+id/pl_menu_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/saytext"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/comment_msg"
                android:singleLine="true" />

            <Button
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/comment" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom"
        android:layout_below="@id/top"
        android:background="#F3F3F3" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.law.fangyuan.Loading
                android:id="@+id/loading"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dip" />

            <LinearLayout
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dip"
                    android:textColor="#000000"
                    android:textIsSelectable="true"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center" >

                    <TextView
                        android:id="@+id/newstime"
                        android:layout_width="wrap_content"
                        android:layout_height="20dip"
                        android:layout_marginRight="5dip"
                        android:textColor="#9C9C9C"
                        android:textIsSelectable="true"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/username"
                        android:layout_width="wrap_content"
                        android:layout_height="20dip"
                        android:textColor="#9C9C9C"
                        android:textIsSelectable="true"
                        android:textSize="12sp" />
                </LinearLayout>

                <WebView
                    android:id="@+id/newstext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/fullscreen_custom_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:visibility="gone" />

</RelativeLayout>