<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_alignParentTop="true" >

        <include layout="@layout/new_top_title" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/more_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/top"
        android:background="@color/background" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:gravity="bottom"
                android:paddingLeft="15dip"
                android:text="个人账号"
                android:textColor="#000000"
                android:textSize="12sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:background="@color/nav_bottom_background_color" />
            <RelativeLayout
                android:id="@+id/member_center"
                android:layout_width="match_parent"
                android:layout_height="60dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip" >

                <ImageView
                    android:id="@+id/setting_1_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dip"
                    android:src="@drawable/setting_1" />

                <TextView
                    android:id="@+id/account"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@id/setting_1_img"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dip"
                    android:text="账号管理"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <include layout="@layout/separator" />
            <!-- 系统设置 -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:gravity="bottom"
                android:paddingLeft="15dip"
                android:text="系统设置"
                android:textColor="#000000"
                android:textSize="12sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:background="@color/nav_bottom_background_color" />

            <include layout="@layout/separator" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip" >

                <ImageView
                    android:id="@+id/setting_2_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dip"
                    android:src="@drawable/setting_2" />

                <CheckBox
                    android:id="@+id/setting_2_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="60dip"
                    android:layout_toLeftOf="@id/setting_2_checkbox"
                    android:layout_toRightOf="@id/setting_2_img"
                    android:orientation="vertical"
                    android:paddingLeft="10dip" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dip"
                        android:gravity="bottom"
                        android:text="新闻推送"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dip"
                        android:gravity="top"
                        android:text="开启或关闭新闻推送"
                        android:textColor="#000000"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </RelativeLayout>

            <include layout="@layout/separator" />

            <RelativeLayout
				android:id="@+id/delete_cache"
                android:layout_width="match_parent"
                android:layout_height="60dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip" >

                <ImageView
                    android:id="@+id/setting_3_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dip"
                    android:src="@drawable/setting_3" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="60dip"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@id/setting_3_img"
                    android:orientation="vertical"
                    android:paddingLeft="10dip" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dip"
                        android:gravity="bottom"
                        android:text="@string/delete_cache"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dip"
                        android:gravity="top"
                        android:text="清除缓存的临时文件"
                        android:textColor="#000000"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </RelativeLayout>

            <include layout="@layout/separator" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip" >

                <ImageView
                    android:id="@+id/setting_4_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dip"
                    android:src="@drawable/setting_4" />

                <CheckBox
                    android:id="@+id/setting_4_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="60dip"
                    android:layout_toLeftOf="@id/setting_4_checkbox"
                    android:layout_toRightOf="@id/setting_4_img"
                    android:orientation="vertical"
                    android:paddingLeft="10dip" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dip"
                        android:gravity="bottom"
                        android:text="声音设置"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dip"
                        android:gravity="top"
                        android:text="开启或关闭新闻推送时的声音"
                        android:textColor="#000000"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </RelativeLayout>

            <include layout="@layout/separator" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip" >

                <ImageView
                    android:id="@+id/setting_5_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dip"
                    android:src="@drawable/setting_5" />

                <CheckBox
                    android:id="@+id/setting_5_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="60dip"
                    android:layout_toLeftOf="@id/setting_5_checkbox"
                    android:layout_toRightOf="@id/setting_5_img"
                    android:orientation="vertical"
                    android:paddingLeft="10dip" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dip"
                        android:gravity="bottom"
                        android:text="自动加载"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dip"
                        android:gravity="top"
                        android:text="当手机片处于wifi环境时，自动缓存"
                        android:textColor="#000000"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </RelativeLayout>

            <include layout="@layout/separator" />
            
			<!-- 软件信息 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:gravity="bottom"
                android:paddingLeft="15dip"
                android:text="软件信息"
                android:textColor="#000000"
                android:textSize="12sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:background="@color/nav_bottom_background_color" />

            <RelativeLayout
				android:id="@+id/check_update"
                android:layout_width="match_parent"
                android:layout_height="60dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip" >

                <ImageView
                    android:id="@+id/setting_6_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dip"
                    android:src="@drawable/setting_6" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@id/setting_6_img"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dip"
                    android:text="@string/check_update"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <include layout="@layout/separator" />

            <RelativeLayout
				android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="60dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip" >

                <ImageView
                    android:id="@+id/setting_7_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dip"
                    android:src="@drawable/setting_7" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@id/setting_7_img"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dip"
                    android:text="@string/about"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <include layout="@layout/separator" />

            <RelativeLayout
				android:id="@+id/exit"
                android:layout_width="match_parent"
                android:layout_height="60dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip" >

                <ImageView
                    android:id="@+id/setting_8_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dip"
                    android:contentDescription="@null"
                    android:src="@drawable/setting_8" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@id/setting_8_img"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dip"
                    android:text="@string/exit"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <include layout="@layout/separator" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>